# gitkukareker

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  build.py  env.sh  te.toml
.cargo/: config.toml
.github/workflows/: ci.yml
.zed/: tasks.json
git/: Cargo.toml
git/src/: change.rs  change_status.rs  commit_history.rs  credentials.rs  lib.rs  repo.rs
kukareker/: Cargo.toml
kukareker/src/: app.rs  lib.rs  main.rs
kukareker/src/model/: change.rs  change_status.rs  mod.rs  state.rs
kukareker/src/ui/: commit_view.rs  main.rs  main_view.rs  mod.rs
kukareker/src/ui/changes/: change.rs  change_status.rs  changes.rs  changes_cell.rs  mod.rs
kukareker/src/ui/history/: history.rs  history_cell.rs  mod.rs
labirintas/: Cargo.toml
labirintas-android/: Cargo.toml
labirintas-android/src/: lib.rs
labirintas/src/: app.rs  lab_level.rs  lib.rs  main.rs
labirintas/src/assets/: images.rs  mod.rs  sounds.rs
labirintas/src/model/: classic.rs  level_data.rs  level_type.rs  mod.rs  settings.rs
labirintas/src/ui/: classic_view.rs  custom_view.rs  game_view.rs  main_menu.rs  mod.rs  settings_view.rs  styles.rs
