[workspace]

default-members = ["kukareker"]
members = ["kukareker"]

resolver = "2"

[workspace.metadata.cargo-machete]
ignored = []

[workspace.dependencies]
serde = "1.0"

kukareker = { path = "kukareker" }

#test-engine = { git = "https://github.com/vlasdasz/test-engine.git", rev = "db78609c8645e43a477952a45414f1430c0f0232" }
test-engine = { path = "../test-engine/test-engine" }
