[workspace]

default-members = ["kukareker"]
members = ["kukareker"]

resolver = "2"

[workspace.metadata.cargo-machete]
ignored = []

[workspace.dependencies]
rfd = "0.15"
git2 = "0.20"
anyhow = "1.0"

rtools = "0.9"

kukareker = { path = "kukareker" }

git = { path = "git" }

test-engine = { git = "https://github.com/vlasdasz/test-engine.git", rev = "86a29ff0a6bfbe9e8492e146cd5d2b4f0e9802d4" }
#test-engine = { path = "../test-engine/test-engine" }
