[package]
name = "kukareker"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "kukareker"

[lib]
name = "kukareker"
crate-type = ["rlib", "staticlib"]

[dependencies]
rfd = { workspace = true }
git = { workspace = true }
anyhow = { workspace = true }

rtools = { workspace = true }

test-engine = { workspace = true }

[build-dependencies]
cfg_aliases = "0.2"
